# xDPd-Virtualization

./: .gitignore  COPYRIGHT (VIRTUALIZATION AGENT)  Makefile.am  README.md  configure.ac
FileBackup/: virtualizationgateway_OLD.cc  virtualizationgateway_OLD.h
config/: plugin_config.m4
configFile/: 1-switch.cfg  2-switch.cfg  4switch-topology.cfg
rofl-diff/: rofl-core.mydiff
src/: Makefile.am
src/vg/: vg.cc
src/xdpd/: Makefile.am  cmm.cc  xdpd.cc
src/xdpd/management/: port_manager.cc  switch_manager.cc  switch_manager.h
src/xdpd/management/plugins/config/: Makefile.am  root_scope.cc  root_scope.h  scope.cc
src/xdpd/management/plugins/config/interfaces/: interfaces_scope.cc
src/xdpd/management/plugins/config/openflow/: lsi_scope.cc  lsi_scope.h  openflow_scope.cc
src/xdpd/management/plugins/config/virtual-agent/: Makefile.am  flowspace_scope.cc  flowspace_scope.h  slice_scope.cc  slice_scope.h  virtual-agent_scope.cc  virtual-agent_scope.h
src/xdpd/openflow/: of_endpoint.h  openflow_switch.cc  openflow_switch.h
src/xdpd/openflow/openflow10/: of10_endpoint.cc  of10_endpoint.h  of10_translation_utils.cc  of10_translation_utils.h  openflow10_switch.cc  openflow10_switch.h
src/xdpd/virtual-agent/: Makefile.am  flowspace.h  slice.cc  slice.h  specification.json  va_switch.cc  va_switch.h  virtualagent.cc  virtualagent.h  virtualgateway.cc  virtualgateway.h  virtualizationgateway.cc  virtualizationgateway.h
src/xdpd/virtual-agent/jsonRpc/: README  abstractstubserver.h  stubclient.h
vg/: Makefile.am  parser.c  parser.h  vg.cc
(+5 files in other folders)
